@@ -1,3 +1,14 @@
+2007-01-24  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.14.5.
+	* Rules-quot: New file, from gettext-0.14.5.
+	* boldquot.sed: New file, from gettext-0.14.5.
+	* en@boldquot.header: New file, from gettext-0.14.5.
+	* en@quot.header: New file, from gettext-0.14.5.
+	* insert-header.sin: New file, from gettext-0.14.5.
+	* quot.sed: New file, from gettext-0.14.5.
+	* remove-potcdate.sin: New file, from gettext-0.14.5.
+
 Gaim: The Pimpin' Penguin IM Clone that's good for the soul!
 
 version 2.0.0:
